[gd_scene load_steps=2 format=3 uid="uid://cj043j01prhs2"]

[ext_resource type="Script" uid="uid://dop51ftdgffxf" path="res://base/ui/production_ui.gd" id="1_4tnxo"]

[node name="ProductionUi" type="CanvasLayer"]
script = ExtResource("1_4tnxo")

[node name="LowerDock" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button" type="Button" parent="LowerDock"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -15.5
offset_right = 48.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Return"

[node name="UpperDock" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="UpperDock"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.5
offset_right = 60.5
offset_bottom = 104.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UpperDock/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Aetherium_HBox" type="HBoxContainer" parent="UpperDock/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UpperDock/PanelContainer/VBoxContainer/Aetherium_HBox"]
layout_mode = 2
text = "Aetherium"

[node name="A_Ammount_Label" type="Label" parent="UpperDock/PanelContainer/VBoxContainer/Aetherium_HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "103"

[node name="Promethium_HBox" type="HBoxContainer" parent="UpperDock/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UpperDock/PanelContainer/VBoxContainer/Promethium_HBox"]
layout_mode = 2
text = "Promethium"

[node name="P_Ammount_Label" type="Label" parent="UpperDock/PanelContainer/VBoxContainer/Promethium_HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "12"

[node name="ExoticAlloy_HBox" type="HBoxContainer" parent="UpperDock/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UpperDock/PanelContainer/VBoxContainer/ExoticAlloy_HBox"]
layout_mode = 2
text = "Exotic Alloy"

[node name="E_Ammount_Label" type="Label" parent="UpperDock/PanelContainer/VBoxContainer/ExoticAlloy_HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "24"

[node name="Salvage_HBox2" type="HBoxContainer" parent="UpperDock/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UpperDock/PanelContainer/VBoxContainer/Salvage_HBox2"]
layout_mode = 2
text = "Salvage"

[node name="S_Ammount_Label" type="Label" parent="UpperDock/PanelContainer/VBoxContainer/Salvage_HBox2"]
unique_name_in_owner = true
layout_mode = 2
text = "24"

[node name="CenterDock" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterDock"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CenterDock/Panel"]
layout_mode = 2

[node name="w_dmg_vbox" type="HBoxContainer" parent="CenterDock/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="w_dmg_label" type="Label" parent="CenterDock/Panel/VBoxContainer/w_dmg_vbox"]
layout_mode = 2
text = "weapon_damage_level"

[node name="w_dmg_lvl_label" type="Label" parent="CenterDock/Panel/VBoxContainer/w_dmg_vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "lvl 1"

[node name="w_dmg_cost_label" type="Label" parent="CenterDock/Panel/VBoxContainer/w_dmg_vbox"]
layout_mode = 2
text = "2 Aetherium"

[node name="w_dmg_bn" type="Button" parent="CenterDock/Panel/VBoxContainer/w_dmg_vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "purchase"

[node name="w_fr_vbox" type="HBoxContainer" parent="CenterDock/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="w_fr_label" type="Label" parent="CenterDock/Panel/VBoxContainer/w_fr_vbox"]
layout_mode = 2
text = "weapon_fire_rate_level"

[node name="w_fr_lvl_label" type="Label" parent="CenterDock/Panel/VBoxContainer/w_fr_vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "lvl 3"

[node name="w_fr_cost_label" type="Label" parent="CenterDock/Panel/VBoxContainer/w_fr_vbox"]
layout_mode = 2
text = "2 Aetherium"

[node name="w_fr_bn" type="Button" parent="CenterDock/Panel/VBoxContainer/w_fr_vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "purchase"

[node name="max_hp_vbox" type="HBoxContainer" parent="CenterDock/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="max_hp_label" type="Label" parent="CenterDock/Panel/VBoxContainer/max_hp_vbox"]
layout_mode = 2
text = "max_hp_level"

[node name="max_hp_lvl_label" type="Label" parent="CenterDock/Panel/VBoxContainer/max_hp_vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "lvl 2"

[node name="max_hp_cost_label" type="Label" parent="CenterDock/Panel/VBoxContainer/max_hp_vbox"]
layout_mode = 2
text = "2 Aetherium"

[node name="max_hp_bn" type="Button" parent="CenterDock/Panel/VBoxContainer/max_hp_vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "purchase"

[node name="max_ammo_vbox" type="HBoxContainer" parent="CenterDock/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="max_ammo_label" type="Label" parent="CenterDock/Panel/VBoxContainer/max_ammo_vbox"]
layout_mode = 2
text = "max_ammo_level"

[node name="max_ammo_lvl_label" type="Label" parent="CenterDock/Panel/VBoxContainer/max_ammo_vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "lvl 5"

[node name="max_ammo_cost_label" type="Label" parent="CenterDock/Panel/VBoxContainer/max_ammo_vbox"]
layout_mode = 2
text = "2 Aetherium"

[node name="max_ammo_bn" type="Button" parent="CenterDock/Panel/VBoxContainer/max_ammo_vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "purchase"

[node name="max_torps_vbox" type="HBoxContainer" parent="CenterDock/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="max_torps_label" type="Label" parent="CenterDock/Panel/VBoxContainer/max_torps_vbox"]
layout_mode = 2
text = "max_torps_level"

[node name="max_torps_lvl_label" type="Label" parent="CenterDock/Panel/VBoxContainer/max_torps_vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "lvl 1"

[node name="max_torps_cost_label" type="Label" parent="CenterDock/Panel/VBoxContainer/max_torps_vbox"]
layout_mode = 2
text = "2 Aetherium"

[node name="max_torps_bn" type="Button" parent="CenterDock/Panel/VBoxContainer/max_torps_vbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "purchase"

[node name="bst_efcy_vbox" type="HBoxContainer" parent="CenterDock/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="bst_efcy_label" type="Label" parent="CenterDock/Panel/VBoxContainer/bst_efcy_vbox"]
layout_mode = 2
text = "boost_efficiency_level"

[node name="bst_efcy_lvl_label" type="Label" parent="CenterDock/Panel/VBoxContainer/bst_efcy_vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "lvl 2"

[node name="bst_efcy_cost_label" type="Label" parent="CenterDock/Panel/VBoxContainer/bst_efcy_vbox"]
layout_mode = 2
text = "2 Aetherium"

[node name="bst_efcy_bn" type="Button" parent="CenterDock/Panel/VBoxContainer/bst_efcy_vbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "purchase"

[node name="mx_bst_pwr_vbox" type="HBoxContainer" parent="CenterDock/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="mx_bst_pwr_label" type="Label" parent="CenterDock/Panel/VBoxContainer/mx_bst_pwr_vbox"]
layout_mode = 2
text = "max_boost_power_level"

[node name="mx_bst_pwr_lvl_label" type="Label" parent="CenterDock/Panel/VBoxContainer/mx_bst_pwr_vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "lvl 1"

[node name="mx_bst_pwr_cost_label" type="Label" parent="CenterDock/Panel/VBoxContainer/mx_bst_pwr_vbox"]
layout_mode = 2
text = "2 Aetherium"

[node name="mx_bst_pwr_bn" type="Button" parent="CenterDock/Panel/VBoxContainer/mx_bst_pwr_vbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "purchase"

[connection signal="pressed" from="LowerDock/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CenterDock/Panel/VBoxContainer/w_dmg_vbox/w_dmg_bn" to="." method="_on_w_dmg_bn_pressed"]
[connection signal="pressed" from="CenterDock/Panel/VBoxContainer/w_fr_vbox/w_fr_bn" to="." method="_on_w_fr_bn_pressed"]
[connection signal="pressed" from="CenterDock/Panel/VBoxContainer/max_hp_vbox/max_hp_bn" to="." method="_on_max_hp_bn_pressed"]
[connection signal="pressed" from="CenterDock/Panel/VBoxContainer/max_ammo_vbox/max_ammo_bn" to="." method="_on_max_ammo_bn_pressed"]
[connection signal="pressed" from="CenterDock/Panel/VBoxContainer/max_torps_vbox/max_torps_bn" to="." method="_on_max_torps_bn_pressed"]
[connection signal="pressed" from="CenterDock/Panel/VBoxContainer/bst_efcy_vbox/bst_efcy_bn" to="." method="_on_bst_efcy_bn_pressed"]
[connection signal="pressed" from="CenterDock/Panel/VBoxContainer/mx_bst_pwr_vbox/mx_bst_pwr_bn" to="." method="_on_mx_bst_pwr_bn_pressed"]
